<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="50dp"
    android:layout_marginBottom="50dp"
    android:orientation="vertical"
    tools:context=".PaymentActivity">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/app_banner" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/n_de_carte_16_chiffres" />

        <EditText
            android:id="@+id/etCardNumber"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:autofillHints="@string/num_cb"
            android:gravity="center_horizontal"
            android:hint="@string/num_cb"
            android:inputType="number" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expiration" />

            <EditText
                android:id="@+id/etExpiration"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:autofillHints=""
                android:gravity="center_horizontal"
                android:hint="@string/expiration_date"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cryptogramme_visuel" />

            <EditText
                android:id="@+id/etCrypto"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:autofillHints="@string/crypto_123"
                android:gravity="center_horizontal"
                android:hint="@string/crypto_123"
                android:inputType="number" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnPayment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:text="@string/pay" />

</LinearLayout>