<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    android:layout_marginBottom="15dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvShoesName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:gravity="center_horizontal"
        android:text="@string/shoes_image_test"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black" />

    <ImageView
        android:id="@+id/ivShoesImage"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:contentDescription="@string/image_chaussure"
        android:src="@drawable/shoes_test" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:weightSum="6">

        <TextView
            android:id="@+id/tvShoesPrice"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/black" />

        <ImageButton
            android:id="@+id/btnAddShoes"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:adjustViewBounds="true"
            android:background="@color/white"
            android:contentDescription="@string/icone_caddy"
            android:scaleType="centerInside"
            android:src="@drawable/caddy" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/black" />

        <Spinner
            android:id="@+id/spShoesQuantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black" />

</LinearLayout>